# rt-bot

./: .env  .gitignore  .travis-ci.yml  .travis.yml  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  nginx.conf  run_local.sh
5minphp-bot/: Dockerfile  README.md  bot-spec.yml  docker-compose.yml
anek-bot/: Dockerfile  README.md  bot-spec.yml  docker-compose.yml  package.json  tsconfig.json  typings.json
bot-4-bots/: Bot4Bots.sln  Dockerfile  README.md  bot-spec.yml  docker-compose.yml  global.json
brackets-bot/: Dockerfile  README.md  bot-spec.yml  brackets.go  brackets_test.go  docker-compose.yml  main.go
ci/: Dockerfile  README.md  bot_configparser.py  requirements.in  requirements.txt  run_bot_tests.py  run_tests_in_docker.sh  test_bots.py
converter-bot/: Dockerfile  README.md  bot-spec.yml  converter.py  docker-compose.yml  main.py
cosmicmind/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cosmicmind.cabal  docker-compose.yml
deploy/: Dockerfile  deploy.sh  main.go
docker-bot/: COPYING  Dockerfile  Gemfile  README.md  Rakefile  bot-spec.yml  commands.rb  config.ru  db.rb  docker-bot.rb  docker-compose.yml  podcast.rb
doit-bot/: Dockerfile  README.md  bot-spec.yml  docker-compose.yaml  index.js  package.json  triggers.json
etc/: nginx.conf
excerpt-bot/: Dockerfile  README.md  bot-spec.yml  docker-compose.yml  main.go  main_test.go
gif-bot/: Dockerfile  main.go  (+7 more)
xrates-bot/: Dockerfile  README.md  bot-spec.yml  docker-compose.yml  stack.yaml  xrates-bot.cabal
xrates-bot/app/: Main.hs
xrates-bot/src/: Lib.hs
(+290 files in other folders)
