name:                xrates-bot
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/ssgreg/rt-bot
author:              Grigory Zubankov
maintainer:          me@ssgreg.com
copyright:           2016 Grigory Zubankov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , aeson-lens
                     , lens
                     , HTTP
                     , http-conduit
                     , bytestring
                     , http-client
                     , http-client-tls
                     , utf8-string
                     , mtl
                     , regex-base
                     , regex-compat-tdfa

  default-language:    Haskell2010

executable xrates-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xrates-bot
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ssgreg/rt-bot
